# synesthizer

./: .gitattributes  README.md  biome.json  main.py  package.json  pyproject.toml  swatch-testing.ipynb  tsconfig.json
.github/workflows/: build.yml  deploy.yml  nextjs.yml
app/: globals.css  instrumentation-client.ts  layout.tsx
components/: app.tsx  controls.tsx  image-overlay.tsx  image-render.tsx  image_render.tsx  numeric-selector.tsx  player.tsx  theme-provider.tsx  theme-toggle.tsx  typed-selector.tsx
src/: colors.spec.ts  colors.ts  extraction.ts  image.spec.ts  image.ts  kmeans.spec.ts  kmeans.ts  notes.spec.ts  notes.ts  order.spec.ts  order.ts  refine.ts  regions.spec.ts  regions.ts  tempo.spec.ts  tempo.ts  utils.ts  worker-interface.ts  worker.ts
