[project]
name = "synesthizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorcet>=3.1.0",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pip>=25.2",
    "plotly>=6.3.0",
    "pyclustering>=0.10.1.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
]
